tests/baselines/reference/classAbstractSuperCalls.errors.txt
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractSuperCalls.ts(14,26): error TS2513: Abstract method 'foo.B' cannot be called via super expression.


==== tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractSuperCalls.ts (1 errors) ====
    
    class A {
        foo() { return 1; }
    }
    
    abstract class B extends A {
        abstract foo();
        bar() { super.foo(); }
        baz() { return this.foo; }
    }
    
    class C extends B {
        foo() { return 2; }
        qux() { return super.foo(); } // error, super is abstract
                             ~~~
!!! error TS2513: Abstract method 'foo.B' cannot be called via super expression.
        norf() { return super.bar(); }
    }
    
    class AA {
        foo() { return 1; }
        bar() { return this.foo(); }
    }
    
    abstract class BB extends AA {
        abstract foo();
        // inherits bar. But BB is abstract, so this is OK.
    }
    